--- a/Style.css
+++ b/Style.css
@@ -13,7 +13,7 @@
 }
 
 html{
-    width: 100vw;
+    width: 100%;
     font-size: 83.34%;
     font-family: 'Montserrat', sans-serif ;
 }
@@ -49,7 +49,7 @@ header.header{
 
 }
 .navbar{
-    width: 100vw;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -247,9 +247,8 @@ span{
 
 section.about{
     display: flex;
-    height: 100vh0;
     position:relative;
-    width: 100vw;
+    width: 100%;
     background-size:cover ;
     justify-items: center;
     align-items: center;
@@ -258,6 +257,7 @@ section.about{
 
 .border{
     height: 60rem;
+    width: 100%;
     padding: 1rem 1% ;
     display: flex;
     border: .3rem solid rgba(0, 0, 0, 0.451);
